--- a/src/templates/layouts/components/sidebar.html
+++ b/src/templates/layouts/components/sidebar.html
@@ -1,8 +1,8 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="/" class="brand-link">
-        <img src="{{ url_for('static', filename='adminlte/dist/img/AdminLTELogo.png') }}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-        <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <a href="/" class="brand-link d-flex align-items-center justify-content-center">
+        <!--<img src="{{ url_for('static', filename='assets/img/core-img/espe-logo.png') }}" class="brand-image brand-text" alt="ESPE Logo">-->
+        <img src="{{ url_for('static', filename='assets/img/core-img/espe.webp') }}" class="brand-image brand-text" alt="ESPE Logo">
     </a>
 
     <!-- Sidebar -->
@@ -34,18 +34,30 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="/roles" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Roles</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="/permissions" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Permisos</p>
                             </a>
                         </li>
                     </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="/classrooms" class="nav-link">
+                        <i class="nav-icon fas fa-school"></i>
+                        <p>Aulas</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/students" class="nav-link">
+                        <i class="nav-icon fas fa-user-graduate"></i>
+                        <p>Estudiantes</p>
+                    </a>
                 </li>
                 <!--<li class="nav-item">
                     <a href="#" class="nav-link">
