--- a/src/templates/pages/administration/students/index.html
+++ b/src/templates/pages/administration/students/index.html
@@ -1,7 +1,7 @@
 {% extends "layouts/admin-lte.html" %}
 
 <!-- Title -->
-{% block title %}Usuarios{% endblock %}
+{% block title %}Estudiantes{% endblock %}
 
 <!-- Start Custom CSS Block -->
 {% block css_page %}
@@ -15,11 +15,11 @@
 <!-- End Custom CSS Block -->
 
 <!-- Page Title -->
-{% block page_title %}Usuarios{% endblock %}
+{% block page_title %}Estudiantes{% endblock %}
 
 <!-- Navegation Page -->
 {% block page_navigation %}
-<li class="breadcrumb-item active">Usuarios</li>
+<li class="breadcrumb-item active">Estudiantes</li>
 {% endblock %}
 
 <!-- Main Content -->
@@ -37,7 +37,7 @@
         {% endif %}
         <div class="row">
             <div class="col-12 d-flex my-3">
-                <button class="btn btn-primary" data-toggle="modal" data-target="#user-modal" onclick="resetModal()">Agregar</button>
+                <button class="btn btn-primary" data-toggle="modal" data-target="#student-modal" onclick="resetModal()">Agregar</button>
             </div>
             <div class="col-12">
                 <div class="card">
@@ -46,27 +46,26 @@
                         <table class="table table-hover text-nowrap">
                             <thead>
                                 <tr>
+                                    <th>Foto</th>
                                     <th>Nombre</th>
                                     <th>Apellido</th>
-                                    <th>Usuario</th>
-                                    <th>Email</th>
-                                    <th>Rol</th>
+                                    <th>Curso</th>
                                     <th colspan="2">Acciones</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for user in users %}
+                                {% for student in students %}
                                 <tr>
-                                    <td>{{ user.name }}</td>
-                                    <td>{{ user.lastname }}</td>
-                                    <td>{{ user.username }}</td>
-                                    <td>{{ user.email }}</td>
-                                    <td>{{ user.role.alias }}</td>
+                                    <!-- /file/d5uxc1h-1ea4bf58-9207-4e1e-a370-6bba45b1d13f.png -->
+                                    <td><img src="#" alt="..."></td>
+                                    <td>{{ student.name }}</td>
+                                    <td>{{ student.lastname }}</td>
+                                    <td>{{ student.course.classroom }} {{ student.course.parallel }}</td>
                                     <td>
-                                        <button class="btn btn-secondary btn-sm" onclick="getUser('{{ user._id }}')" data-toggle="modal" data-target="#user-modal">Editar</button>
+                                        <button class="btn btn-secondary btn-sm" onclick="getStudent('{{ student._id }}')" data-toggle="modal" data-target="#student-modal">Editar</button>
                                     </td>
                                     <td>
-                                        <button class="btn btn-danger btn-sm" onclick="deleteUser('{{ user._id }}')" data-toggle="modal" data-target="#delete-modal">Eliminar</button>
+                                        <button class="btn btn-danger btn-sm" onclick="deleteStudent('{{ student._id }}')" data-toggle="modal" data-target="#delete-modal">Eliminar</button>
                                     </td>
                                 </tr>
                                 {% endfor %}
@@ -84,50 +83,45 @@
 {% endblock %}
 
 <!-- Create Modal -->
-{% include "pages/users/user-modal.html" %}
+{% include "pages/administration/students/student-modal.html" %}
 
 <!-- Delete Modal -->
-{% include "pages/users/delete-modal.html" %}
+{% include "pages/administration/students/delete-modal.html" %}
 
 <!-- Start Custom JS Block -->
 {% block js_page %}
 <!-- Start Page JS -->
 <script>
-    const userForm = $('#user-form');
-    const userFormDelete = $('#delete-form');
+    const studentForm = $('#student-form');
+    const studentFormDelete = $('#delete-form');
 
-    function getUser(id) {
-        userForm.attr('action', '/users/update/' + id);
-        $('#user-modal-header').attr('class', 'modal-header bg-secondary');
-        $.get('/users/' + id, function(data) {
+    function getStudent(id) {
+        studentForm.attr('action', '/students/update/' + id);
+        $('#student-modal-header').attr('class', 'modal-header bg-secondary');
+        $.get('/students/' + id, function(data) {
             $('#name').val(data.name);
             $('#lastname').val(data.lastname);
-            $('#username').val(data.username);
-            $('#email').val(data.email);
-            $('input[name = role][value = "'+ data.role._id.$oid +'"]').prop('checked', true);
+            $('#course').val(data.course._id.$oid);
         });
     }
 
-    function deleteUser(id) {
-        userFormDelete.attr('action', '/users/delete/' + id)
+    function deleteStudent(id) {
+        studentFormDelete.attr('action', '/students/delete/' + id)
     }
 
     function resetModal() {
-        $('#user-modal-header').attr('class', 'modal-header bg-primary');
+        $('#student-modal-header').attr('class', 'modal-header bg-primary');
         $('#name').val(null);
         $('#lastname').val(null);
-        $('#username').val(null);
-        $('#email').val(null);
-        $('#role').val(null);
-        $('input[name=role]').prop('checked', false);
+        $('#course').val(null);
     }
 
     function resetFormAttributes() {
-        userForm.attr('action', '/users');
+        studentForm.attr('action', '/students');
     }
 
-    function resetUser() {
-        userFormDelete.attr('action', '#');
+    function resetstudent() {
+        studentFormDelete.attr('action', '#');
     }
 </script>
 <script src=""></script>
