--- a/src/templates/pages/matters/index.html
+++ b/src/templates/pages/matters/index.html
@@ -37,7 +37,7 @@
         {% endif %}
         <div class="row">
             <div class="col-12 d-flex my-3">
-                <button class="btn btn-primary" data-toggle="modal" data-target="#user-modal" onclick="resetModal()">Agregar</button>
+                <button class="btn btn-primary" data-toggle="modal" data-target="#matter-modal" onclick="resetModal()">Agregar</button>
             </div>
             <div class="col-12">
                 <div class="card">
@@ -46,27 +46,19 @@
                         <table class="table table-hover text-nowrap">
                             <thead>
                                 <tr>
-                                    <th>Nombre</th>
-                                    <th>Apellido</th>
-                                    <th>Usuario</th>
-                                    <th>Email</th>
-                                    <th>Rol</th>
+                                    <th>Materia</th>
                                     <th colspan="2">Acciones</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for user in users %}
+                                {% for matter in matters %}
                                 <tr>
-                                    <td>{{ user.name }}</td>
-                                    <td>{{ user.lastname }}</td>
-                                    <td>{{ user.username }}</td>
-                                    <td>{{ user.email }}</td>
-                                    <td>{{ user.role.alias }}</td>
+                                    <td>{{ matter.name }}</td>
                                     <td>
-                                        <button class="btn btn-secondary btn-sm" onclick="getUser('{{ user._id }}')" data-toggle="modal" data-target="#user-modal">Editar</button>
+                                        <button class="btn btn-secondary btn-sm" onclick="getMatter('{{ matter._id }}')" data-toggle="modal" data-target="#matter-modal">Editar</button>
                                     </td>
                                     <td>
-                                        <button class="btn btn-danger btn-sm" onclick="deleteUser('{{ user._id }}')" data-toggle="modal" data-target="#delete-modal">Eliminar</button>
+                                        <button class="btn btn-danger btn-sm" onclick="deleteMatter('{{ matter._id }}')" data-toggle="modal" data-target="#delete-modal">Eliminar</button>
                                     </td>
                                 </tr>
                                 {% endfor %}
@@ -84,50 +76,41 @@
 {% endblock %}
 
 <!-- Create Modal -->
-{% include "pages/users/user-modal.html" %}
+{% include "pages/matters/matter-modal.html" %}
 
 <!-- Delete Modal -->
-{% include "pages/users/delete-modal.html" %}
+{% include "pages/matters/delete-modal.html" %}
 
 <!-- Start Custom JS Block -->
 {% block js_page %}
 <!-- Start Page JS -->
 <script>
-    const userForm = $('#user-form');
-    const userFormDelete = $('#delete-form');
+    const matterForm = $('#matter-form');
+    const matterFormDelete = $('#delete-form');
 
-    function getUser(id) {
-        userForm.attr('action', '/users/update/' + id);
-        $('#user-modal-header').attr('class', 'modal-header bg-secondary');
-        $.get('/users/' + id, function(data) {
+    function getMatter(id) {
+        matterForm.attr('action', '/matters/update/' + id);
+        $('#matter-modal-header').attr('class', 'modal-header bg-secondary');
+        $.get('/matters/' + id, function(data) {
             $('#name').val(data.name);
-            $('#lastname').val(data.lastname);
-            $('#username').val(data.username);
-            $('#email').val(data.email);
-            $('input[name = role][value = "'+ data.role._id.$oid +'"]').prop('checked', true);
         });
     }
 
-    function deleteUser(id) {
-        userFormDelete.attr('action', '/users/delete/' + id)
+    function deleteMatter(id) {
+        matterFormDelete.attr('action', '/matters/delete/' + id)
     }
 
     function resetModal() {
-        $('#user-modal-header').attr('class', 'modal-header bg-primary');
+        $('#matter-modal-header').attr('class', 'modal-header bg-primary');
         $('#name').val(null);
-        $('#lastname').val(null);
-        $('#username').val(null);
-        $('#email').val(null);
-        $('#role').val(null);
-        $('input[name=role]').prop('checked', false);
     }
 
     function resetFormAttributes() {
-        userForm.attr('action', '/users');
+        matterForm.attr('action', '/matters');
     }
 
-    function resetUser() {
-        userFormDelete.attr('action', '#');
+    function resetMatter() {
+        matterFormDelete.attr('action', '#');
     }
 </script>
 <script src=""></script>
