--- a/src/templates/pages/users/user-modal.html
+++ b/src/templates/pages/users/user-modal.html
@@ -1,9 +1,11 @@
-<div class="modal fade" id="user-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="user-modalLabel" aria-hidden="true">
+<div class="modal fade" id="user-modal" data-backdrop="static" data-keyboard="false" tabindex="-1"
+    aria-labelledby="user-modalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
         <form action="/users" method="POST" class="modal-content" id="user-form">
             <div class="modal-header bg-primary" id="user-modal-header">
                 <h5 class="modal-title" id="user-modalLabel">Nuevo Usuario</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="resetFormAttributes()">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                    onclick="resetFormAttributes()">
                     <span class="text-white" aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -28,10 +30,38 @@
                     <label for="password">Contraseña</label>
                     <input type="password" class="form-control" id="password" name="password">
                 </div>
+                <div class="col-12">
+                    <div class="row">
+                        <div class=" form-group col-6">
+                            <label>Rol</label>
+                            {% for role in roles %}
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="role" id="{{ role.role }}"
+                                        value="{{ role._id }}">
+                                    <label class="form-check-label" for="{{ role.role }}">
+                                        {{ role.alias }}
+                                    </label>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <div class=" form-group col-6">
+                            <label>Permisos Adicionales</label>
+                            {% for permission in permissions %}
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="{{ permission }}" id="permission[]">
+                                    <label class="form-check-label" for="permission[]">
+                                        {{ permission.alias }}
+                                    </label>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Guardar</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="resetFormAttributes()">Cancelar</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal"
+                    onclick="resetFormAttributes()">Cancelar</button>
             </div>
         </form>
     </div>
