--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -54,12 +54,7 @@
                     </div>
                     <div class="row">
                         <div class="col-8">
-                            <div class="icheck-primary">
-                                <input type="checkbox" id="remember">
-                                <label for="remember">
-                                    Mantener sesión
-                                </label>
-                            </div>
+                            <a href="/login/student">Estudiante</a>
                         </div>
                         <!-- /.col -->
                         <div class="col-4">
