--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,94 +1,106 @@
 {% extends "layouts/admin-lte.html" %}
 
 <!-- Title -->
-{% block title %}Index{% endblock %}
+{% block title %}Inicio{% endblock %}
 
 <!-- Start Custom CSS Block -->
 {% block css_page %}
-    <!-- Start CSS Page -->
-    <style>
-        /**/
-    </style>
-    <link rel="stylesheet" href="">
-    <!-- End CSS Page -->
+<!-- Start CSS Page -->
+<style>
+    /**/
+</style>
+<link rel="stylesheet" href="">
+<!-- End CSS Page -->
 {% endblock %}
 <!-- End Custom CSS Block -->
 
 <!-- Page Title -->
-{% block page_title %}Starter Page{% endblock %}
+{% block page_title %}Inicio{% endblock %}
 
 {% block main_content %}
-    <div class="content">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+<div class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 col-6">
 
-                            <p class="card-text">
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
-                            </p>
-
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
-                        </div>
+                <div class="small-box bg-info">
+                    <div class="inner">
+                        <h3>{{ nUsers }}</h3>
+                        <p>Usuarios Registrados</p>
                     </div>
-
-                    <div class="card card-primary card-outline">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-
-                            <p class="card-text">
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
-                            </p>
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
-                        </div>
-                    </div>
-                    <!-- /.card -->
-                </div>
-                <!-- /.col-md-6 -->
-                <div class="col-lg-6">
-                    <div class="card">
-                        <div class="card-header">
-                            <h5 class="m-0">Featured</h5>
-                        </div>
-                        <div class="card-body">
-                            <h6 class="card-title">Special title treatment</h6>
-
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-
-                    <div class="card card-primary card-outline">
-                        <div class="card-header">
-                            <h5 class="m-0">Featured</h5>
-                        </div>
-                        <div class="card-body">
-                            <h6 class="card-title">Special title treatment</h6>
-
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+                    <div class="icon">
+                        <i class="ion ion-bag"></i>
                     </div>
                 </div>
-                <!-- /.col-md-6 -->
             </div>
-            <!-- /.row -->
+
+            <div class="col-lg-3 col-6">
+
+                <div class="small-box bg-success">
+                    <div class="inner">
+                        <h3>{{ nStudets }}</h3>
+                        <p>Estudiantes Matriculados</p>
+                    </div>
+                    <div class="icon">
+                        <i class="ion ion-stats-bars"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-6">
+
+                <div class="small-box bg-warning">
+                    <div class="inner">
+                        <h3>{{ nClassrooms }}</h3>
+                        <p>Aulas</p>
+                    </div>
+                    <div class="icon">
+                        <i class="ion ion-person-add"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-6">
+
+                <div class="small-box bg-danger">
+                    <div class="inner">
+                        <h3>{{ nCalendars }}</h3>
+                        <p>Horarios</p>
+                    </div>
+                    <div class="icon">
+                        <i class="ion ion-pie-graph"></i>
+                    </div>
+                </div>
+            </div>
+
         </div>
-        <!-- /.container-fluid -->
+        <hr>
+        <div class="row">
+            {% for classroom in classrooms %}
+            <div class="col-lg-4">
+                <div class="card card-primary card-outline">
+                    <div class="card-header">
+                        <h5 class="m-0">{{ classroom.classroom }} {{ classroom.parallel }}</h5>
+                    </div>
+                    <div class="card-body">
+                        <a href="/course/{{ classroom._id }}" class="btn btn-primary">Ver mas</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
     </div>
+</div>
+<!-- /.container-fluid -->
 {% endblock %}
 
 <!-- Start Custom JS Block -->
 {% block js_page %}
-    <!-- Start Page JS -->
-    <script>
+<!-- Start Page JS -->
+<script>
         //
-    </script>
-    <script src=""></script>
-    <!-- End Page JS -->
+</script>
+<script src=""></script>
+<!-- End Page JS -->
 {% endblock %}
 <!-- Start Custom JS Block -->
