--- a/src/templates/pages/administration/students/student-modal.html
+++ b/src/templates/pages/administration/students/student-modal.html
@@ -25,6 +25,14 @@
                     </select>
                 </div>
                 <div class="form-group col-6">
+                    <label for="period">Periodo</label>
+                    <select class="custom-select" name="period" id="period" required>
+                        {% for period in periods %}
+                            <option value="{{ period._id }}">{{ period.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="form-group col-6">
                     <label>Foto</label>
                     <div class="custom-file">
                         <input type="file" class="custom-file-input" id="photo" name="photo">
