--- a/src/templates/pages/matters/matter-modal.html
+++ b/src/templates/pages/matters/matter-modal.html
@@ -14,6 +14,15 @@
                     <label for="name">Nombre</label>
                     <input type="text" class="form-control" id="name" name="name" required>
                 </div>
+                <div class="form-group col-6">
+                    <label for="classroom">Clase</label>
+                    <select class="custom-select" name="classroom" id="classroom">
+                        <option selected>Seleccione...</option>
+                        {% for classroom in classrooms %}
+                            <option value="{{ classroom._id }}">{{ classroom.classroom }} {{ classroom.parallel }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Guardar</button>
