--- a/src/templates/pages/qualifies/qualifies-modal.html
+++ b/src/templates/pages/qualifies/qualifies-modal.html
@@ -9,8 +9,15 @@
             </div>
             <div class="modal-body row">
                 <div class="form-group col-12">
-                    <label for="name">Calificación</label>
-                    <input type="number" class="form-control" id="note" name="note" min="1" max="5" required>
+                    <div class="row justify-content-center">
+                        <img src="../../../static/assets/img/core-img/star.png" alt="..." style="height: 150px;">
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-16">
+                            <label for="name">Calificación en estreas (1 a 5)</label>
+                            <input type="number" class="form-control" id="note" name="note" min="1" max="5" required>
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group col-12">
                     <label for="comments">Comentario</label>
