--- a/src/templates/pages/users/index.html
+++ b/src/templates/pages/users/index.html
@@ -66,7 +66,11 @@
                                         <button class="btn btn-secondary btn-sm" onclick="getUser('{{ user._id }}')" data-toggle="modal" data-target="#user-modal">Editar</button>
                                     </td>
                                     <td>
-                                        <button class="btn btn-danger btn-sm" onclick="deleteUser('{{ user._id }}')" data-toggle="modal" data-target="#delete-modal">Eliminar</button>
+                                        {% if user.active %}
+                                            <button class="btn btn-warning btn-sm" onclick="deleteUser('{{ user._id }}')" data-toggle="modal" data-target="#delete-modal">Deshabilitar</button>
+                                        {% else %}
+                                            <a href="/users/enable/{{ user._id }}" class="btn btn-info btn-sm">Habilitar</a>
+                                        {% endif %}
                                     </td>
                                 </tr>
                                 {% endfor %}
@@ -109,7 +113,7 @@
     }
 
     function deleteUser(id) {
-        userFormDelete.attr('action', '/users/delete/' + id)
+        userFormDelete.attr('action', '/users/disable/' + id)
     }
 
     function resetModal() {
